fix text-overflow for the value type column in the schema page

--- a/src/main/webapp/resources/css/schema-table.css
+++ b/src/main/webapp/resources/css/schema-table.css
@@ -46,6 +46,9 @@
     padding-left: 0;
     margin-left: 0;
     font-size: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .types a:hover {
